TODO: fix right spacing

--- a/frontend/static/scss/_home.scss
+++ b/frontend/static/scss/_home.scss
@@ -1,6 +1,6 @@
 #hero-banner{
-	height:30rem;	
-	background:linear-gradient(to bottom right, $secondary-color, $header-color);
+	height:50rem;	
+	background:linear-gradient(to bottom right, $secondary-color, $tertiary-color);
 	h1{
 		font-size:5rem;	
 		color:white;
